buildscript
    {
    ext.kotlin_version = '1.3.+'
    repositories
        {
        mavenCentral()
        }
    dependencies
        {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        // Should the kotlin dependency go in Command-line? Core?
        }
    }

subprojects
    {
    version 0.22

    apply plugin: 'java'
    apply plugin: 'kotlin'
    apply plugin: 'maven-publish'
    apply plugin: 'jacoco'

    group = 'org.museautomation'

    repositories
        {
        mavenLocal()
        mavenCentral()
        }

    //noinspection GroovyAssignabilityCheck
    dependencies
        {
        compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
        compile 'io.github.microutils:kotlin-logging:1.4.6'

        testCompile 'org.junit.jupiter:junit-jupiter-api:5+'
        }

    task copyTestResources(type: Copy) {
        from "${projectDir}/src/test/resources"
        into "${buildDir}/classes/test"
        }

    processTestResources.dependsOn copyTestResources

    task sourcesJar(type: Jar) {
        archiveClassifier.set('sources')
        from sourceSets.main.allSource
        }

    javadoc {
        options.addBooleanOption('html5', true)
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    task javadocJar(type: Jar, dependsOn: javadoc) {
        archiveClassifier.set('javadoc')
        from javadoc.destinationDir
        }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifact sourcesJar
                artifact javadocJar
            }
        }
        repositories {
            mavenLocal()
        }
    }

    artifacts
        {
        archives sourcesJar
        archives javadocJar
        }

        tasks.withType(JavaCompile) {
            sourceCompatibility = JavaVersion.VERSION_11
            targetCompatibility = JavaVersion.VERSION_11
        }
    }

wrapper {
    gradleVersion = '6.0.1'
}
